# 1.16.0

Enhancements:

- #7449 Wayland support (port Red Hat libei and libportal impl)
- #7448 Only add PR comments for internal PR
- #7445 Update `config.yaml` to support Linux Mint build target
- #7453 Change default value for dev thanks message
- #7455 Use EI screen when XDG_SESSION_TYPE is "wayland"

# 1.15.1

Enhancements:

- #7452 Change default value for dev thanks message

# 1.15.0

Enhancements:

- #7254 Bind client to a network interface with `--address`
- #7262 Backward compatibility for M1 and M2 builds
- #7263 Change name of Flatpak uploaded to snapshots
- #7265 Remove obtrusive Linux key press log messages
- #7269 Change file drag drop ERROR to DEBUG message
- #7274 Support env var to build unified core binary
- #7277 Change all errors that cause crash are FATAL
- #7282 Improve error handling for thread jobs
- #7284 Change session ID info log message to DEBUG2
- #7283 Update all workflows and fix broken macOS workflows
- #7313 Fix CodeQL workflow: Failed to perl 404 Not Found
- #7317 Bump `sonar-scanner-cli` to 5.0.1.3006
- #7318 Remove Azure Pipelines config entirely
- #7319 Remove workflows for slow self-hosted RPi runners
- #7320 Move `build_version.py` script to scripts dir
- #7321 Switch to GitHub hosted Mac M1 runner
- #7322 Use C++20 and add Windows CMake preset
- #7323 Add Linux and macOS CMake presets
- #7325 Add timeout to all GitHub workflows
- #7326 Restore lpDesktop assignment in Windows daemon
- #7327 Only use Ninja to build on Windows
- #7328 Reset error state before calling Process32Next
- #7330 Split CMake presets into debug and release
- #7331 Script to install deps (Windows only for now)
- #7332 Static link OpenSSL libs in CMake preset for Windows
- #7333 Update VS Code config for Windows daemon debugging
- #7334 Implement hello back in IPC protocol
- #7335 Clickable debug source paths and new launch target
- #7336 Add C++ and LLDB to VS Code recommendations
- #7351 Use deps script to make life easier for contribs